completed User functionality for mongoDB database